# traffic_analysis

./: .gitignore  README.md  shell.nix
back_tao/: .gitignore  pyproject.toml
back_tao/src/core/: bcrypt.py  database.py
back_tao/src/core/autenticacion/: mail.py  roles_y_permisos.py  usuario.py
back_tao/src/core/board/: __init__.py
back_tao/src/core/configuracion/: __init__.py
back_tao/src/core/institucion/: __init__.py  formularios.py
back_tao/src/core/servicio/: __init__.py  formularios.py
back_tao/src/core/solicitudes/: __init__.py  formularios.py
back_tao/src/core/usuarios_institucion/: __init__.py  formularios.py
back_tao/src/web/: __init__.py  config.py  error.py  rutas.py
back_tao/src/web/api/: autenticacion.py  institucion.py  perfil.py  servicio.py  solicitud.py  stats.py
back_tao/src/web/controllers/: configuracion.py  instituciones.py  oauth.py  servicios.py  solicitudes.py  usuarios.py  usuarios_institucion.py
back_tao/src/web/schemas/: autenticacion.py  institucion.py  perfil.py  servicio.py  solicitud.py
back_tao/src/web/templates/: error.html  flash.html  home.html  index.html  layout-logged.html  layout.html  (+1 more)
backend/: .env-example  .gitignore  README.md  TODO  __init__.py  app.py  autenticacion_oauth.py  config.py  pyproject.toml  seeds.py
backend/api/: __init__.py  autenticacion.py  procesamiento.py  prueba.py  registro.py
backend/helpers/: autenticacion.py  mail.py  produccion.py
backend/models/: bcrypt.py  seeds.py
backend/models/ia/: __init__.py  example.py
backend/models/prueba/: __init__.py  prueba.py
backend/models/schemas/: autenticacion.py  modelo.py  prueba.py  registro.py
backend/models/usuario/: __init__.py  usuario.py
backend/src/autenticacion/: __init__.py  bcrypt.py  formularios.py
backend/src/core/: database.py  seeds.py
backend/src/web/: __init__.py  config.py
backend/templates/: prueba.html
backend/tests/: __init__.py  test_usuarios.py
backend/tests/auth/: test_auth.py  test_registro.py  test_usuario.py
(+96 files in other folders)
