[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tavo <tavo.lop33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"
marshmallow = "^3.21.3"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-mail = "^0.10.0"
flask-cors = "^4.0.1"
supervision = "^0.24.0"
tqdm = "^4.66.5"
ultralytics = "^8.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
